--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/Enemy.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/MainMenu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,23 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Player.tscn", "res://scenes/Enemy.tscn", "res://scenes/Level1.tscn")
-<<<<<<< HEAD
-current_scene="res://scenes/Level1.tscn"
-=======
-current_scene="res://scenes/Player.tscn"
->>>>>>> origin/main
+open_scenes=PackedStringArray("res://scenes/Player.tscn", "res://scenes/Enemy.tscn", "res://scenes/MainMenu.tscn")
+<<<<<<<HEADcurrent_scene="res://scenes/Level1.tscn"
+current_scene="res://scenes/MainMenu.tscn"
 center_split_offset=-345
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
 selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
 
 [EditorWindow]
 
@@ -48,7 +55,7 @@ position=Vector2i(0, 29)
 [ScriptEditor]
 
 open_scripts=["res://scripts/Enemy.gd", "res://scripts/MainMenu.gd", "res://scripts/Player.gd", "res://scripts/PlayerCamera.gd"]
-selected_script="res://scripts/Player.gd"
+selected_script="res://scripts/MainMenu.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
